--- a/src/Application/resources/FXML Files/GameTest.fxml
+++ b/src/Application/resources/FXML Files/GameTest.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
-<StackPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.GameController">
+<StackPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.GameController">
    <children>
       <FlowPane alignment="TOP_RIGHT">
          <children>
@@ -25,22 +25,22 @@
             </FlowPane>
             <HBox prefHeight="60.0" prefWidth="462.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Button fx:id="answerButton1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="102.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                  <Button fx:id="answerButton1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleAnswerButtonAction" prefHeight="102.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="answerButton2" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="102.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                  <Button fx:id="answerButton2" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleAnswerButtonAction" prefHeight="102.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="answerButton3" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="174.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                  <Button fx:id="answerButton3" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleAnswerButtonAction" prefHeight="174.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="answerButton4" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="201.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                  <Button fx:id="answerButton4" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleAnswerButtonAction" prefHeight="201.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
